fix(main-app): fixed a bug where the scrollbar appeared on the body element
Fixed a bug where the scrollbar appeared on the body element

--- a/apps/main-app/public/main.css
+++ b/apps/main-app/public/main.css
@@ -8,6 +8,9 @@ body::-webkit-scrollbar-thumb {
   background-clip: content-box;
   background-color: var(--td-scrollbar-color);
 }
+body::-webkit-scrollbar-track {
+  background: var(--td-scrollbar-color);
+}
 body {
   overflow-x: hidden;
   margin: 0;
